Add resourcees media styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,8 @@
   --custom-card-border:#DEDEDE;
   --received-img-businnes:#FFEFEF;
   --received-img-enterprice:#F2F6FF;
+  --form-heading-color:#252B42;
+  
 }
 
 /* --light-bg:#E5E5E5;
