--- a/css/resources.css
+++ b/css/resources.css
@@ -6,7 +6,6 @@
 .great__container {
     display: flex;
     justify-content: space-between;
-    
 }
 
 .great__info{
@@ -52,7 +51,14 @@
     border-radius: 100px;
     border: none;
     border: 1px solid #EAEAEA;
+    background-color: var(--body-color);
+   
 }
+
+.great__input::placeholder{
+    color: var(--text-color);
+}
+
 
 .great-button {
     display: inline-block;
@@ -200,15 +206,8 @@
 }
 
 /* MAPS */
-
 .maps{
     margin-bottom: 60px;
-}
-
-
-/* FORM */
-.resources__form{
-    
 }
 
 .contact-page-content{
@@ -220,8 +219,6 @@
     margin-right: 70px;
 }
 
-
-
 .resources-form__info{
     text-align: center;
 }
@@ -230,7 +227,7 @@
     font-size: 24px;
     font-weight: 700;
     line-height: 33px;
-    color: var(--form-heading-color);
+    color: var(var(--form-heading-color));
     margin-bottom: 45px;
 }
 ::placeholder{
@@ -249,7 +246,7 @@
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     border-radius: 39px;
-    background-color:var(--custom-bg) ;
+    background-color:var(--form-fields-color) ;
 }
 
 .form-field-textarea {
@@ -288,8 +285,6 @@
         text-align: center;
     }
     
-    
-    
     .great__img-position{
         display: none;
     }
@@ -326,11 +321,7 @@
 
 
 
-@media Only screen and (max-width:890px) {
-    .great-button{
-        /* left: 75%; */
-    }
-}
+
 
 @media Only screen and  (max-width:800px) {
     .great-button{
