--- a/css/customer.css
+++ b/css/customer.css
@@ -242,6 +242,10 @@
     color: var(--text-color-dark);
 }
 
+.cta{
+    margin-top: 40px;
+}
+
 
 @media only screen and (max-width:1129px) {
     .customer-product__card-inner{
